--- a/grafo-matriz-adjacencia-v0/.project
+++ b/grafo-matriz-adjacencia-v0/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>teste-xor</name>
+	<name>grafo-matriz-adjacencia-v0</name>
 	<comment></comment>
 	<projects>
 	</projects>
