--- a/grafo-matriz-adjacencia-v1/.project
+++ b/grafo-matriz-adjacencia-v1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>grafo-matriz-adjacencia</name>
+	<name>grafo-matriz-adjacencia-v1</name>
 	<comment></comment>
 	<projects>
 	</projects>
