--- a/heap-lista_v0/.project
+++ b/heap-lista_v0/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>heap-grafo-lista_v0</name>
+	<name>heap-lista_v0</name>
 	<comment></comment>
 	<projects>
 	</projects>
